# La-rodadora

./: .gitignore  README.md  build.ps1  chat.h5  chatbot.py  classes.pkl  main.py  pyproject.toml  requirements.txt  train.py  words.pkl
chatbot/: chat.h5  data.json  main.py  train.py  transcriber.py
components/: __init__.py  box_layout.py  label.py
rodadora_chatbot/: chat.kv  main.py
rodadora_chatbot/components/: chat_bubble.py
src/chatbot/: __init__.py  chat.h5  chatbot.py  data.json  train.py  words.pkl
src/chatbot/data/en/: chat.h5  classes.pkl  raw.json  words.pkl
src/chatbot/data/es/: chat.h5  classes.pkl  raw.json  words.pkl
src/gui/: chat.kv  main.py
src/gui/components/: __init__.py  adaptive_widget.py  chat_bubble.py  label.py  text_field.py
src/gui/tasks/: __init__.py  chatbot.py  recorder.py  tts.py  utils.py
src/pyttsx3/: voice.py
src/pyttsx3/drivers/: _espeak.py  espeak.py  sapi5.py
wheels/: README.md
