[project]
name = "rodadora-chatbot"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "rodadora-chatbot"
version = "0.1.0"
description = ""
authors = ["jedel1043 <jedel0124@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gui", from = "src" },
    { include = "chatbot", from = "src" },
    { include = "pyttsx3", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.22"
kivy = "^2.2.1"
kivymd = "^1.1.1"
tensorflow = "^2.13.0"
keras = "^2.13.1"
nltk = "^3.8.1"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"
trio = "^0.22.2"
openai-whisper = "^20231117"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
langdetect = "^1.0.9"
torch = "2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pystack = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
