[project]
name = "rodadora-chatbot"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "rodadora-chatbot"
version = "0.1.0"
description = ""
authors = ["jedel1043 <jedel0124@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gui", from = "src" },
    { include = "chatbot", from = "src" },
    { include = "pyttsx3", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
trio = "^0.22.2"
numpy = "^1.22"
kivy = "^2.2.1"
kivymd = "^1.1.1"
nltk = "^3.8.1"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"
openai-whisper = "^20231117"
langdetect = "^1.0.9"
torch = "2.1.1"
triton = [
    { platform = "win32", file = "./wheels/triton-2.1.0-cp311-cp311-win_amd64.whl"},
    { platform = "linux", version = "^2.0", source = "pypi" },
]
# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = "^2.13.0"
tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
comtypes = {version = "^1.2.0", platform = "win32"}
langcodes = "^3.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pystack = { platform = "linux", version = "^1.3.0", source = "pypi" }
httpx = "^0.26.0"
stream-unzip = "^0.0.89"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
